<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/emailReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/emailEtReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintTop_toBottomOf="@id/emailReg" />

    <TextView
        android:id="@+id/passwordReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="34dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEtReg" />

    <EditText
        android:id="@+id/passwordEtReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintTop_toBottomOf="@id/passwordReg" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEtReg"
        app:layout_constraintEnd_toStartOf="@id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/zapomnit"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/passwordEtReg"
        app:layout_constraintTop_toBottomOf="@id/passwordEtReg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="6sp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/pass"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/btnRegistrationReg"
        app:layout_constraintTop_toBottomOf="@id/passwordEtReg" />

    <Button
        android:id="@+id/btnVhodReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/voity"
        app:layout_constraintEnd_toEndOf="@id/passwordEtReg"
        app:layout_constraintTop_toBottomOf="@id/passwordEtReg" />

    <Button
        android:id="@+id/btnRegistrationReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="4dp"
        android:text="@string/registr"
        app:layout_constraintEnd_toStartOf="@id/btnVhodReg"
        app:layout_constraintTop_toBottomOf="@id/passwordEtReg" />

</androidx.constraintlayout.widget.ConstraintLayout>